Summary: Remove embargo (no public access) menu item since it's no longer effective with IAM.

--- a/webapp/home/templates/base.html
+++ b/webapp/home/templates/base.html
@@ -44,11 +44,11 @@
                         <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
-                        <li>
-                            <a href="{{ url_for('reports.render_no_public') }}">
-                                No Public Access (admin)
-                            </a>
-                        </li>
+{#                        <li>#}
+{#                            <a href="{{ url_for('reports.render_no_public') }}">#}
+{#                                No Public Access (admin)#}
+{#                            </a>#}
+{#                        </li>#}
                         <li>
                             <a href="{{ url_for('reports.render_offline') }}">
                                 Offline Data (admin)
